# imgforge

./: .gitignore  Dockerfile  Makefile  README.md  imgforge.sh  start-dev.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/flash/: page.tsx
frontend/components/: Header.tsx
frontend/components/layout/: PageContainer.tsx
frontend/components/wizards/: CreateImage.tsx  LandingPage.tsx  flash-image-wizard.tsx
